public interface Car {

    public String getRegistrationNumber();

    public String getMake();

    public String getModel();

    public int getNumberOfDoors();

    public int getRegistrationFee();




}
